Changed contact me email address

--- a/contact me.html
+++ b/contact me.html
@@ -12,7 +12,7 @@
       <li><a href="https://www.linkedin.com/in/mitchell-mcclure-a17c20">LinkedIn</a></li>
     </ul>
     <hr>
-    <form action="mailto:penguinpinz@gmail.com" method="post" enctype="text/plain">
+    <form action="mailto:mrmcclur17@gmail.com" method="post" enctype="text/plain">
       <label>Your Name:</label>
       <input type="text" name="yourName" value=""><br><br>
       <label>Your Email:</label>
