--- a/hobbies.html
+++ b/hobbies.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Mitchell McClure - Hobbies</title>
   </head>
   <body>
     <h3>Hobbies</h3>
