Added basic styling using css

--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
 <head>
   <meta charset="utf-8">
   <title>Mitchell McClure - Personal Site</title>
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
   <table cellspacing="20">
-    <td><img src="Pics/Cosmic Ashtray circle.png" height=235 width=235></td>
+    <td><img src="Pics/Cosmic Ashtray circle.png" height="235" width="235"></td>
     <td>
       <h1>Mitchell McClure</h1>
       <p><em>Recent Graduate - <a href="Mitchell McClure Resume.docx">Downloadable Resume</a></href></em></p>
